[tool.poetry]
name = "sswave"
version = "0.0.1"
description = "Wavetable processing tools for the Intellijel/Cylonix Shapeshifter Eurorack module"
authors = ["Eirik Krogstad <eirikkr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
clize = "^4.1.1"
matplotlib = "^3.1.2"
numpy = "^1.18.0"
SoundFile = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
